# ROS_tutorials

./: .gitignore  1_mastering_ros_demo_pkg  2_mastering_ros_demo_custom_msg  3_mastering_ros_demo_service  4_mastering_ros_tf  5_mastering_robot_description  7_gazebo_sensors_tutorial
1_mastering_ros_demo_pkg/: CMakeLists.txt  package.xml
1_mastering_ros_demo_pkg/launch/: demo_std_msg.launch
1_mastering_ros_demo_pkg/src/: demo_std_msg_publisher.cpp  demo_std_msg_subscriber.cpp
2_mastering_ros_demo_custom_msg/: CMakeLists.txt  package.xml
2_mastering_ros_demo_custom_msg/launch/: demo_custom_msg.launch
2_mastering_ros_demo_custom_msg/msg/: demo_msg.msg
2_mastering_ros_demo_custom_msg/src/: demo_custom_msg_params.cpp  demo_custom_msg_publisher.cpp  demo_custom_msg_subscriber.cpp
3_mastering_ros_demo_service/: CMakeLists.txt  package.xml
3_mastering_ros_demo_service/launch/: demo_actions.launch  demo_msg.launch  demo_service.launch  demo_topic.launch
3_mastering_ros_demo_service/src/: demo_service_client.cpp  demo_service_server.cpp
3_mastering_ros_demo_service/srv/: demo_srv.srv
4_mastering_ros_tf/: CMakeLists.txt  package.xml
4_mastering_ros_tf/launch/: start_demo.launch  start_demo_2.launch
4_mastering_ros_tf/rviz/: environment.rviz
4_mastering_ros_tf/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
5_mastering_robot_description/: CMakeLists.txt  package.xml
5_mastering_robot_description/launch/: R2D2.launch  diff_robot.launch  pan_tilt.launch  seven_dof.launch
5_mastering_robot_description/rviz/: pan_tilt.rviz
5_mastering_robot_description/src/: joint_publiser.cpp
5_mastering_robot_description/srv/: changecontrolledjoints.srv  changescale.srv
5_mastering_robot_description/urdf/: R2D2.urdf  pan_tilt.gv  pan_tilt.urdf  seven_dof_arm.urdf
6_gazebo_ros_demos/rrbot_control/config/: rrbot_control.yaml
6_gazebo_ros_demos/rrbot_description/launch/: rrbot_rviz.launch
6_gazebo_ros_demos/rrbot_description/urdf/: rrbot.xacro
6_gazebo_ros_demos/rrbot_gazebo/: package.xml
6_gazebo_ros_demos/rrbot_gazebo/launch/: rrbot_gazebo_control.launch  rrbot_spawn.launch  rrbot_world.launch
7_gazebo_sensors_tutorial/: CMakeLists.txt  package.xml
7_gazebo_sensors_tutorial/launch/: camera_coke_gazebo2.launch  camera_coke_rviz2.launch  cameras_chessboard.launch
7_gazebo_sensors_tutorial/models/pawnB1/: pawnB1.sdf
Raspberry_nodes/HighFidelitySensorModels/turtlebot3_highfidelityWheelEncoderIMU/: .cproject  .project  CMakeLists.txt  package.xml  (+1 more)
Raspberry_nodes/aruco_py/: .project  package.xml
Raspberry_nodes/brazo_4dof_udla/: CMakeLists.txt  package.xml
Raspberry_nodes/cam_test/: CMakeLists.txt  package.xml
Raspberry_nodes/gazebo_motor_control/: CMakeLists.txt
Raspberry_nodes/gpio_blink/: CMakeLists.txt  package.xml
Raspberry_nodes/gpio_encoder/: .cproject  CMakeLists.txt  package.xml
Raspberry_nodes/gpio_encoder/src/: encoder.cpp
Raspberry_nodes/gpio_io/: .cproject  .project  CMakeLists.txt  package.xml
Raspberry_nodes/gpio_mpu6050/: .cproject  .project  CMakeLists.txt  package.xml
Raspberry_nodes/gpio_publisher/: .cproject  CMakeLists.txt  package.xml
Raspberry_nodes/gpio_pwm/: CMakeLists.txt  package.xml
Raspberry_nodes/gpio_subscriber/: CMakeLists.txt  package.xml
Raspberry_nodes/imu_9250/: CMakeLists.txt  package.xml
Raspberry_nodes/joy_pi/: CMakeLists.txt  package.xml
Raspberry_nodes/joy_pi/launch/: joy.launch
Raspberry_nodes/joy_pi/src/: joy_turtle.cpp
Raspberry_nodes/magnetometer/: CMakeLists.txt  package.xml
Raspberry_nodes/mpu6050/: CMakeLists.txt  package.xml
Raspberry_nodes/mpu6050/include/mpu6050/: I2CPi.h
Raspberry_nodes/mpu6050/launch/: mpu_node.launch
Raspberry_nodes/mpu6050/src/: MPU6050Pi.cpp  mpu_driver.cpp  read_MPU6050Pi.cpp
Raspberry_nodes/pose_integration/: .cproject  .project  CMakeLists.txt  package.xml
Raspberry_nodes/pose_integration/src/: pose.cpp
Raspberry_nodes/record/: .cproject  .project  CMakeLists.txt  data_saved.txt  package.xml
Raspberry_nodes/servo_py/: CMakeLists.txt  package.xml
Raspberry_nodes/servo_simulation/: CMakeLists.txt  package.xml
Raspberry_nodes/ultrasonic_py/: CMakeLists.txt  package.xml
Raspberry_nodes/webcam_corners/: CMakeLists.txt  package.xml
Raspberry_nodes/webcam_corners/launch/: test_corners.launch
Raspberry_nodes/webcam_corners/src/: cam.cpp  cam_subscriber.cpp  corners.cpp
Raspberry_nodes/webcam_lines/: CMakeLists.txt  package.xml
Raspberry_nodes/webcam_lines/launch/: test_lines.launch
Raspberry_nodes/webcam_lines/src/: cam_camera_info.cpp  corners.cpp  lines.cpp
Scrips_python/Chatbot/: data.txt  iptelegram.py  service.txt
Scrips_python/read_webcam/: cam.py
action_lib_tutorial/: CMakeLists.txt  package.xml  pantilt.rviz
action_lib_tutorial/action/: pantilt_action.action
action_lib_tutorial/launch/: pantilt.launch
action_lib_tutorial/src/: pantilt_action_client.cpp  pantilt_action_server.cpp
gazebo_control_tutorial_traj/: CMakeLists.txt  package.xml
gazebo_control_tutorial_traj/config/: gazebo_ros_control_params.yaml  seven_dof_arm_gazebo_joint_position_full.yaml  seven_dof_arm_gazebo_joint_position_full_effort.yaml  tutorial10.perspective
gazebo_control_tutorial_traj/launch/: aruco_seven_dof_arm_with_rgbd_world_position_controllers.launch  aruco_seven_dof_arm_world_trajectory_controller.launch  kinect_arm_aruco_cube_b.rviz  kinect_arm_aruco_cube_c.rviz  kinect_arm_aruco_cube_rviz_b.launch  kinect_arm_aruco_cube_rviz_c.launch  pan_tilt_rqt.launch
gazebo_control_tutorial_traj/models/kinect-plugin/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
gazebo_control_tutorial_traj/src/: pubcontrols.cpp  pubcontrols_traj.cpp  pubcontrols_traj_action.cpp
gazebo_control_tutorial_traj/urdf/: aruco_seven_dof_arm.xacro  aruco_seven_dof_arm_with_rgbd.xacro
rpi-rotary-encoder-python/: test.py
rviz_marker_demo/: CMakeLists.txt  package.xml  rviz_marker_demo.rviz
rviz_marker_demo/launch/: rviz_marker_demo.launch
rviz_marker_demo/src/: rviz_node.cpp
turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
(+110 files in other folders)
