<?xml version="1.0"?>
<package format="2">>
  <name>rviz_marker_demo</name>
  <version>0.0.0</version>
  <description>The rviz_marker_demo package</description>

  <maintainer email="jan.rosell@todo.todo">jan rosell</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  
</package>
